Fixed alignment issue with user search form

--- a/src/app/users/user-search/user-search.component.scss
+++ b/src/app/users/user-search/user-search.component.scss
@@ -2,6 +2,5 @@
 
 .search-form {
   @include card();
-  padding-top: 8px;
-  padding-bottom: 0;
+  padding-bottom: 4px;
 }
